--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ google-auth-oauthlib==1.2.2
 google-crc32c==1.7.1
 google-generativeai==0.8.5
 googleapis-common-protos==1.70.0
+googlemaps==4.10.0
 grpcio==1.71.0
 grpcio-status==1.71.0
 h11==0.14.0
